Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ figcaption {
   text-align: center;
   font-size: 10pt;
 }
-featured-property {
+#featured-property {
   text-align: center;
   width: 800px;
 }
